--- a/components/layout/layout.html
+++ b/components/layout/layout.html
@@ -1,6 +1,6 @@
 <div class="page-content">
     <div class="content-inside">   
-        <div class="ui stackable grid">                 
+        <div class="ui grid">                 
             {{ component('members-site>navbar',{ language: current_language, active: active }) }}
             {{ content }} 
         </div>        
