--- a/components/navbar/menu/menu.html
+++ b/components/navbar/menu/menu.html
@@ -1,5 +1,5 @@
 <div class="ui inverted secondary large menu navbar-menu">      
     <div class="item">                                                                         
-        {{ component('members-site>navbar.menu.items') }}
+        {{ component('members>navbar.menu.items') }}
     </div>           
 </div> 
