--- a/components/layout/page/page.html
+++ b/components/layout/page/page.html
@@ -1,4 +1,4 @@
-{% component 'members-site>layout' %}
+{% component 'members>layout' %}
     <div class="row">  
         <div class="three wide computer only column">
             {{ left_content }}
